Commit Currency and Customer

--- a/apps/Tasky.Blazor/_Imports.razor
+++ b/apps/Tasky.Blazor/_Imports.razor
@@ -14,7 +14,7 @@
 @using Volo.Abp.BlazoriseUI.Components
 
 @using Tasky.CurrencyService
-
+@using Tasky.CustomerService
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 
 @using Blazorise.Components
