--- a/apps/Tasky.Blazor/Pages/Remittances/Remittances.razor
+++ b/apps/Tasky.Blazor/Pages/Remittances/Remittances.razor
@@ -220,8 +220,8 @@
                 <CloseButton Clicked="CloseCreateCustomerModal" />
             </ModalHeader>
             <ModalBody>
-                @*  <Validations @ref="@CreateCustomerValidationsRef" Model="@NewCustomer" ValidateOnLoad="false">
-                <Validation MessageLocalizer="@LH.Localize">*@
+                  <Validations @ref="@CreateCustomerValidationsRef" Model="@NewCustomer" ValidateOnLoad="false">
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["FirstName"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.FirstName">
@@ -230,8 +230,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*  </Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+                  </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["LastName"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.LastName">
@@ -240,8 +240,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*                    </Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+                 </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["FatherName"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.FatherName">
@@ -250,8 +250,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*  </Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+                 </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["MotherName"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.MotherName">
@@ -260,8 +260,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*</Validation>*@
-                @*<Validation MessageLocalizer="@LH.Localize">*@
+                </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["BirthDate"]</FieldLabel>
                     <DatePicker @bind-Date="@NewCustomer.BirthDate">
@@ -270,8 +270,8 @@
                         </Feedback>
                     </DatePicker>
                 </Field>
-                @* </Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+                 </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["Phone"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.Phone">
@@ -280,8 +280,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*</Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+                </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["Address"]</FieldLabel>
                     <TextEdit @bind-Text="@NewCustomer.Address">
@@ -290,8 +290,8 @@
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*    </Validation>
-                <Validation MessageLocalizer="@LH.Localize">*@
+               </Validation>
+                <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["Gender"]</FieldLabel>
                     <Select TValue="Gender" @bind-SelectedValue="@NewCustomer.Gender">
@@ -304,8 +304,8 @@
                         }
                     </Select>
                 </Field>
-                @*          </Validation>
-                </Validations>*@
+               </Validation>
+                </Validations>
             </ModalBody>
             <ModalFooter>
                 <Button Color="Color.Secondary"
@@ -331,8 +331,8 @@
                 <CloseButton Clicked="CloseCreateRemittanceModal" />
             </ModalHeader>
             <ModalBody>
-                @*<Validations @ref="@CreateValidationsRef"  ValidateOnLoad="false" Model="@NewRemittance">*@
-                @*  <Validation MessageLocalizer="@LH.Localize">*@
+                <Validations @ref="@CreateValidationsRef"  ValidateOnLoad="false" Model="@NewRemittance">
+                  <Validation MessageLocalizer="@LH.Localize">
                 <Field>
                     <FieldLabel>@L["Amount"]</FieldLabel>
                     <NumericEdit TValue="double" @bind-Value="@NewRemittance.Amount">
@@ -341,7 +341,7 @@
                         </Feedback>
                     </NumericEdit>
                 </Field>
-                @*</Validation>*@
+                  </Validation>
                 <Field>
                     <FieldLabel>@L["SenderBy"]</FieldLabel>
                     <TextEdit @bind-value="@NewRemittance.SenderName" Placeholder="Please choose Sender Customer" ReadOnly></TextEdit>
@@ -354,8 +354,8 @@
                     </TextEdit>*@
                     <Button Color="Color.Primary" Clicked="()=>OpenCreateSearchCustomerModal(NewRemittance.SerialNumber)">.....</Button>
                 </Field>
-                @*                       <Validation MessageLocalizer="@LH.Localize">
-                *@ 
+                  <Validation MessageLocalizer="@LH.Localize">
+                 
                 <Field>
                     <FieldLabel>@L["Type"]</FieldLabel>
 
@@ -371,9 +371,9 @@
                         }
                     </Select>
                 </Field>
-                @*  </Validation>*@
-                @*                       <Validation MessageLocalizer="@LH.Localize">
-                *@  
+                  </Validation>
+                   <Validation MessageLocalizer="@LH.Localize">
+                  
                 <Field>
                     <FieldLabel>@L["Currency"]</FieldLabel>
 
@@ -390,19 +390,19 @@
                         }
                     </Select>
                 </Field>
-                @*                    </Validation>
+                  </Validation>
                 <Validation MessageLocalizer="@LH.Localize">
-                *@   
+                   
                 <Field>
                     <FieldLabel>@L["ReceiverFullName"]</FieldLabel>
-                    <TextEdit @bind-value="@NewRemittance.ReceiverFullName">
+                            <TextEdit @bind-Text="@NewRemittance.ReceiverFullName">
                         <Feedback>
                             <ValidationError />
                         </Feedback>
                     </TextEdit>
                 </Field>
-                @*  </Validation>*@
-                @*     </Validations>*@
+                 </Validation>
+                </Validations>
             </ModalBody>
             <ModalFooter>
                 <Button Color="Color.Secondary"
